1.2.5i4:
    Checks & Agents:
    * 0812 nginx_status: New check for monitoring status information of the Nginx web server...

    Multisite:
    * 0934 FIX: Logwatch messages with class unknown ( 'u' ) now displayed as WARN...

    WATO:
    * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...

    Reporting & Availability:
    * 0985 Availability: display phases of freqent state changes as "chaos"...


1.2.5i3:
    Core & Setup:
    * 0884 New options --oid and --extraoid for cmk --snmpwalk...
    * 0785 FIX: Availability: fixed memory leak in table statehist...
    * 0903 FIX: availability: fixed bug causing the availability feature not considering timeperiod transitions
    * 0888 FIX: Fix SNMP inventory check in simulation mode

    Checks & Agents:
    * 0149 cisco_secure: New check for Port Security on Cisco swichtes
    * 0751 New localcheck for Linux that makes sure that filesystems in /etc/fstab are mounted...
    * 0783 enterasys_lsnat: new check monitoring the current LSNAT bindings
    * 0601 printer_alerts: check can now display a textual representation of the alert code...
            NOTE: Please refer to the migration notes!
    * 0799 ibm_svc_systemstats.cpu_util: New check for CPU Utilization of an IBM SVC / V7000 device in total
    * 0800 ibm_svc_nodestats.cache, ibm_svc_systemstats.cache: New checks for Cache Usage of IBM SVC / V7000 devices
    * 0150 printer_suply: New option to upturn toner levels...
    * 0801 ibm_svc_eventlog: New Check for Messages in Event log of IBM SVC / V7000 devices
    * 0151 enterasys_cpu_util: Changed check to not longer summarize all modules...
            NOTE: Please refer to the migration notes!
    * 0802 ibm_svc_nodestats.iops, ibm_svc_systemstats.iops: new checks for IO operations/sec on IBM SVC / V7000 devices
    * 0602 cmciii.humidity: new check for Rittals CMC III humidity sensors
    * 0829 oracle_tablespaces: improved formatting of levels text in check output...