@@ -973,8 +973,23 @@ def do_check(hostname, ipaddress, only_check_types = None):
         elif num_errors > 0:
             output = "Got no information from host, "
             status = exit_spec.get("empty_output", 2)
-        elif expected_version and agent_version != expected_version:
-            output = "unexpected agent version %s (should be %s), " % (agent_version, expected_version)
+        elif expected_version and agent_version \
+             and not is_expected_agent_version(agent_version, expected_version):
+            # expected version can either be:
+            # a) a single version string
+            # b) a tuple of ("at_least", {'daily_build': '2014.06.01', 'release': '1.2.5i4'}
+            #    (the dict keys are optional)
+            if type(expected_version) == tuple and expected_version[0] == 'at_least':
+                expected = 'at least'
+                if 'daily_build' in expected_version[1]:
+                    expected += ' build %s' % expected_version[1]['daily_build']
+                if 'release' in expected_version[1]:
+                    if 'daily_build' in expected_version[1]:
+                        expected += ' or'
+                    expected += ' release %s' % expected_version[1]['release']
+            else:
+                expected = expected_version
+            output = "unexpected agent version %s (should be %s), " % (agent_version, expected)
             status = exit_spec.get("wrong_version", 1)
         elif agent_min_version and agent_version < agent_min_version:
             output = "old plugin version %s (should be at least %s), " % (agent_version, agent_min_version)
@@ -1408,6 +1423,75 @@ def username():
 
 def i_am_root():
     return os.getuid() == 0
+
+# Parses versions of Check_MK and converts them into comparable integers.
+# This does not handle daily build numbers, only official release numbers.
+# 1.2.4p1   -> 01020450001
+# 1.2.4     -> 01020450000
+# 1.2.4b1   -> 01020420100
+# 1.2.3i1p1 -> 01020310101
+# 1.2.3i1   -> 01020310100
+def parse_version(v):
+    def extract_number(s):
+        number = ''
+        for i, c in enumerate(s):
+            try:
+                int(c)
+                number += c
+            except ValueError:
+                s = s[i:]
+                return number and int(number) or 0, s
+        return number and int(number) or 0, ''
+
+    major, minor, rest = v.split('.')
+    sub, rest = extract_number(rest)
+
+    if not rest:
+        val = 50000
+    elif rest[0] == 'p':
+        num, rest = extract_number(rest[1:])
+        val = 50000 + num
+    elif rest[0] == 'i':
+        num, rest = extract_number(rest[1:])
+        val = 10000 + num*100
+
+        if rest and rest[0] == 'p':
+            num, rest = extract_number(rest[1:])
+            val += num
+    elif rest[0] == 'b':
+        num, rest = extract_number(rest[1:])
+        val = 20000 + num*100
+
+    return int('%02d%02d%02d%05d' % (int(major), int(minor), sub, val))
+
+def is_expected_agent_version(agent_version, expected_version):
+    try:
+        if type(expected_version) == str and expected_version != agent_version:
+            return False
+
+        elif type(expected_version) == tuple and expected_version[0] == 'at_least':
+            is_daily_build = len(agent_version) == 10 or '-' in agent_version
+
+            spec = expected_version[1]
+            if is_daily_build and 'daily_build' in spec:
+                expected = int(spec['daily_build'].replace('.', ''))
+                if len(agent_version) == 10: # master build
+                    agent = int(agent_version.replace('.', ''))
+
+                else: # branch build (e.g. 1.2.4-2014.06.01)
+                    agent = int(agent_version.split('-')[1].replace('.', ''))
+
+                if agent < expected:
+                    return False
+
+            elif 'release' in spec:
+                if parse_version(agent_version) < parse_version(spec['release']):
+                    return False
+
+        return True
+    except Exception, e:
+        raise MKGeneralException("Unable to check agent version (Agent: %s Expected: %s, Error: %s)" %
+                (agent_version, expected_version, e))
 
 # Returns the nodes of a cluster, or None if hostname is
 # not a cluster
