@@ -1,6 +1,7 @@
 1.2.5i4:
     Checks & Agents:
     * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
+    * 0814 Agent versions can now be checked with "at least version X" parameters...
 
     Multisite:
     * 0934 FIX: Logwatch messages with class unknown ( 'u' ) now displayed as WARN...
